k8s-playground/homepage/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: homepage
  labels:
    app: homepage
    environment: playground
  annotations:
    argocd.argoproj.io/sync-wave: "-2"
